# wg-disco

./: Cargo.toml  README.md
src/: discover.rs  error.rs  main.rs  signaling.rs  wg.rs
src/discover/: stun.rs
src/signaling/: irc.rs
src/wg/: cmd.rs  config.rs  instance.rs  peer.rs
